# QuickCare-AI-Medical-AI-Assistant-

./: .replit  Pipfile  QUICKCARE AI.docx  README.md  brain_of_the_doctor.py  gradio_app.py  pyproject.toml  test_autoplay.py  voice_of_the_doctor.py  voice_of_the_patient.py
