[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.23.3",
    "groq>=0.22.0",
    "gtts>=2.5.4",
    "pillow>=11.1.0",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
]
